[metadata]
name = dynoscale
version = attr: dynoscale.__version__
author = Ondrej Dolejsi
author_email = ondrej.dolejsi@gmail.com
description = A simple yet efficient scaling agent for Python apps on Heroku
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
keywords = heroku,scaling,dyno,wsgi
url = https://dynoscale.net
project_urls =
    Documentation = http://dynoscale.net/documentation/category/general
    Source = https://github.com/Mjolnir-Software/dynoscale-python
    Tracker = https://github.com/Mjolnir-Software/dynoscale-python
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: Unix
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Topic :: Adaptive Technologies
    Topic :: Internet
    Topic :: Internet :: Log Analysis
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Internet :: WWW/HTTP :: Site Management
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware
    Topic :: Internet :: WWW/HTTP :: WSGI :: Server
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Pre-processors
    Topic :: System :: Logging
    Topic :: System :: Monitoring
    Topic :: System :: Networking :: Monitoring

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    asgiref>=3.6.0
    requests>=2.28.2

[options.packages.find]
where = src

[options.extras_require]
test = pytest>=7.2.1
       pytest-asyncio>=0.20.3
       pytest-cov>=4.0.0
       pylint>=2.16.1
       flake8>=5.0.4
       pytest-flake8>=1.1.1
       responses>=0.22.0
       redislite>=6.2.805324
       rq>=1.12.0
       Flask>=2.2.2
       colorlog>=6.7.0
       starlette>=0.23.1
       uvicorn[standard]>=0.20.0
       gunicorn>=20.1.0
